[package]
name = "delt_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
actix-web-actors = "4.1.0"
cgmath = "0.18.0"
lazy_static = "1.4.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
near-sdk = "4.0.0"
reqwest = "0.11.11"

[dependencies.uuid]
version = "1.1.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
