[package]
name = "delt-contracts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
anyhow = "1.0"
near-units = "0.2.0"
tokio = { version = "1.14", features = ["full"] }

delt-mt = {path = "../delt-mt"}
delt-ft = {path = "../delt-ft"}
delt-d = {path = "../delt-d"}
delt-g = {path = "../delt-g"}

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true