[package]
name = "delt-d"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.0.0"
serde = "1.0"
serde_json = { version ="1.0" }
near-contract-standards = "4.0.0"