[package]
name = "delt-mt"
version = "0.1.0"
authors = ["Delt <kciuq@protonmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
serde = "1.0"
serde_json = { version ="1.0" }

# tokio = { version = "1.14", features = ["full"] }
# workspaces = "0.3.0"
# near-units = "0.2.0"
# anyhow = "1.0"
# near-primitives = "0.14.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true