[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.0.0"
delt-mt = {path = "../delt-mt"}
delt-ft = {path = "../delt-ft"}
delt-d = {path = "../delt-d"}
near-contract-standards = "4.0.0"